--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,24 @@
 = ready_for_i18n
 
-Description goes here.
+ready_for_i18n is a handy tool in the first step of transfering your local 
+Rails project to an i18n one.
+
+It will automatically extract hard-coded text from your ERB view file,
+then choose a proper key and replace them with the I18n.translate method.
+
+Currently two extractors are available
+# TextExtractor will scan all text node in you HTML document, extract them and replace with <%=t :key%>
+# LabelExtractor will scan all the text related helper methods like link_to('Login'...) and replace with t(:login)
+
+== Basic Command Line Usage:
+  <pre>ready_for_i18n <path to ERB source files> <target path> </pre>
+
+Your erb files in source path will be transformed(i18n_ready)
+and copy to target file path,together with a locale file 'en.yml'.
+
+Using the following options:
+        --locale [LOCALE]            Generating for the specified locale (default locale 'en')
+        --ext [EXTENSION]            The file extension name of your views(default '.html.erb')
 
 == Note on Patches/Pull Requests
  
