--- a/README.rdoc
+++ b/README.rdoc
@@ -8,9 +8,8 @@ then choose a proper key and replace them with the I18n.translate method.
 
 Currently two extractors are available:
 
-# TextExtractor will scan all text node in you HTML document, like <b>Hello</b> and extract them and replace with <%=t(:text_hello)%>
-# LabelExtractor will scan all the text in helper methods like link_to('Login'...) and replace with link_to (t(:login))
-
+* TextExtractor will scan all text nodes in you HTML document, like &lt;b&gt;Hello&lt;/b&gt; then replace it with <%=t(:text_hello)%>.
+* LabelExtractor will scan all the text in helper methods like link_to('Login'...) and replace with link_to (t(:login)).
 
 == Basic Command Line Usage:
   ready_for_i18n <path to ERB source files> <target path> 
